--- a/projectapp/templates/form.html
+++ b/projectapp/templates/form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <p> Add new {{ model_name }}:</p>
-<form method="POST">{% csrf_token %}
+<form enctype='multipart/form-data' method="POST">{% csrf_token %}
 	{{ form }}
 	<input type="Submit" name="Submit" value="submit">
 </form>
